# tasknow

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: buffer.h  defines.h  errors.h  main.cpp  request_handler.cpp  request_handler.h  serverd.cpp  serverd.h  task.cpp  task.h  task_list.cpp  task_list.h
src/functions/: serializer.cpp  serializer.h
src/tasknow-cli/: CMakeLists.txt  actions.cpp  actions.h  client.cpp  client.h  main.cpp  options.cpp  options.h  request_creator.cpp  request_creator.h  response_handler.cpp  response_handler.h
src/types/: sdto.h  task.h
tests/: CMakeLists.txt  test.cpp
